--- a/src/style.css
+++ b/src/style.css
@@ -332,12 +332,21 @@ ul {
 
 @media (max-width: 700px) {
   .help-container {
-    flex-direction: column;
-    align-items: flex-start;
+    flex-direction: column-reverse;
+    align-items: flex-end;
   }
 
   .help-container h2 {
     margin-top: 16px;
     margin-left: 0;
   }
+}
+.advice {
+  background-color: #44403c;
+  margin-bottom: 40px;
+  padding: 16px 24px;
+  border-radius: 16px;
+  display: flex;
+  align-items: center;
+  gap: 16px;
 }
