--- a/src/style.css
+++ b/src/style.css
@@ -347,6 +347,18 @@ ul {
   padding: 16px 24px;
   border-radius: 16px;
   display: flex;
+  justify-content: space-between;
   align-items: center;
+  gap: 16px;
+}
+
+.advice-left{
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+}
+.advice-right{
+  display: flex;
+  flex-direction: column;
   gap: 16px;
 }
