--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,4 @@
-/* App.css */
+/* style.css */
 
 * {
   margin: 0;
@@ -341,6 +341,7 @@ ul {
     margin-left: 0;
   }
 }
+
 .advice {
   background-color: #44403c;
   margin-bottom: 40px;
@@ -352,12 +353,13 @@ ul {
   gap: 16px;
 }
 
-.advice-left{
+.advice-left {
   display: flex;
   flex-direction: column;
   gap: 8px;
 }
-.advice-right{
+
+.advice-right {
   display: flex;
   flex-direction: column;
   gap: 16px;
@@ -367,3 +369,65 @@ ul {
   flex-shrink: 0;
 }
 
+.confirmation-dialog {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.8);
+  z-index: 100;
+  visibility: hidden;
+  opacity: 0;
+  transition: visibility 0s, opacity 0.25s ease;
+}
+
+.confirmation-dialog.show {
+  visibility: visible;
+  opacity: 1;
+}
+
+.confirmation-content {
+  background-color: #fafaf9;
+  border-radius: 8px;
+  padding: 32px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 16px;
+}
+
+.confirmation-actions {
+  display: flex;
+  gap: 16px;
+}
+
+.btn-delete,
+.btn-cancel {
+  border: none;
+  font-family: "Montserrat Alternates", sans-serif;
+  line-height: 1;
+  text-transform: uppercase;
+  font-size: 17px;
+  padding: 16px 32px;
+  background-color: #f80f0b;
+  color: #fafaf9;
+  border-radius: 100px;
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+.btn-delete:hover,
+.btn-cancel:hover {
+  background-color: #e00d09;
+}
+.confirmation-dialog {
+  background-color: black !important
+}
+
+.confirmation-content {
+  color: hotpink;
+}
